Decreased size of note container so it no longer overlaps with tag selection

--- a/Frontend/src/app/Components/notes/notes.component.scss
+++ b/Frontend/src/app/Components/notes/notes.component.scss
@@ -1,5 +1,5 @@
 .all-notes-container {
-  width: 90%;
+  width: 80%; // This should be calculated since tag selection has a fixed width
   margin-top: 1em;
 }
 
